changed line in body

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <h1>Checking out 15 tags</h1>
     <p>Class01, assignment 1 </p>
     <br>
-    <p>We are entering a new world
+    <p>We are entering the world of Web Development
     </p>
   </body>
   <footer>
     <p>Assignment done by Mike Merritt</p>   
-  </footer>  
+  </footer>
 </html>
