--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <br>
     <p>We are entering the world of Web Development
     </p>
+    <figure>
+      <img src="Zeus.jpg" alt="Zeus" width="225" height="225">
+    </figure>
   </body>
   <footer>
     <p>Assignment done by Mike Merritt</p>   
