--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <h1>Checking out 15 tags</h1>
     <p>Class01, assignment 1 </p>
     <br>
-    <p>We are entering the world of Web Development
+    <p>I am entering a bold new world for myself "Web Development"
     </p>
     <figure>
       <img src="Zeus.jpg" alt="Zeus" width="225" height="225">
     </figure>
+    <font size="6" color="red">Zeus!</font>
   </body>
   <footer>
     <p>Assignment done by Mike Merritt</p>   
