--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
   </head>
   <body>
     <h1>Checking out 15 tags</h1>
-    <p>Class01, assignment 1 </p>
-    <br>
-    <p>I am entering a bold new world for myself "Web Development"
-    </p>
+      <p>Class01, assignment 1 </p>
+      <br>
+      <p>I am entering a bold new world for myself "Web Development" </p>
     <figure>
       <img src="Zeus.jpg" alt="Zeus" width="225" height="225">
     </figure>
     <font size="6" color="red">Zeus!</font>
+    <article>
+      <h2>Family Dog</h2>
+        <p>He is part Lab and Weimaraner</p>
+        <dl>
+        <dt>Lab</dt>
+        <dd>"The Labrador Retriever, also Labrador, is a type of retriever-gun dog.""</dd>
+        <dt>Weimaraner</dt>
+        <dd>"The Weimaraner (/ˈvaɪmərɑːnər/ VY-mə-rah-nər) is a large[2] dog
+            that was originally bred for hunting in the early 19th century.""</dd>
+        </dl>
+    </article>
   </body>
   <footer>
     <p>Assignment done by Mike Merritt</p>   
