added canvas with blue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <h1>Checking out 15 tags</h1>
       <p>Class01, assignment 1 </p>
       <br>
+    <canvas id="myCanvas"></canvas>
+      <script>
+      var canvas = document.getElementById("myCanvas");
+      var ctx = canvas.getContext("2d");
+      ctx.fillStyle = "blue";
+      ctx.fillRect(0, 0, 400, 20);
+      </script>
       <p>I am entering a bold new world for myself "Web Development" </p>
     <figure>
       <img src="Zeus.jpg" alt="Zeus" width="225" height="225">
