added text color, address to footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <style>
+      h1 {color:red;}
+      h2 {color:purple;}
+      p {color:blue;}
+    </style>
   </head>
   <body>
     <h1>Checking out 15 tags</h1>
@@ -9,10 +14,10 @@
       <br>
     <canvas id="myCanvas"></canvas>
       <script>
-      var canvas = document.getElementById("myCanvas");
-      var ctx = canvas.getContext("2d");
-      ctx.fillStyle = "blue";
-      ctx.fillRect(0, 0, 400, 20);
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        ctx.fillStyle = "blue";
+        ctx.fillRect(0, 0, 400, 20);
       </script>
       <p>I am entering a bold new world for myself "Web Development" </p>
     <figure>
@@ -32,6 +37,12 @@
     </article>
   </body>
   <footer>
-    <p>Assignment done by Mike Merritt</p>   
+    <p>Assignment done by Mike Merritt</p>
+    <address>
+      Questions send to: <a href="mailto:mmmerritt1@outlook.com">Mike M</a>.<br>
+      Univeristy of Washington <br>
+      1410 NE Campus Parkway <br>
+      Seattle, Wa. 98195    <br>
+    </address>   
   </footer>
 </html>
